--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3WJTNWF75"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-W3WJTNWF75');
+    </script>
+
 </head>
 <body>
     <div class="container">
