--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -34,10 +34,12 @@
                     <li><a class="button" href="/#testimonials">Testimonios</a></li>
                     <li><a class="button" href="/#contact">Contacto</a></li>
                     <li>
-                        <% if (typeof isLoggedIn !== 'undefined' && isLoggedIn) { %>
+                        <% if (typeof isAdmin !== 'undefined' && isAdmin) { %>
                             <a class="button" href="/logout">Cerrar sesion</a>
                         <% } else { %>
-                            <a class="button" href="/login">Iniciar Sesion</a>
+                            <a class="button" href="/login">
+                                <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-key"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 10m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M21 12a9 9 0 1 1 -18 0a9 9 0 0 1 18 0z" /><path d="M12.5 11.5l-4 4l1.5 1.5" /><path d="M12 15l-1.5 -1.5" /></svg>
+                            </a>
                         <% } %>
                     </li>
                     <% if (typeof isAdmin !== 'undefined' && isAdmin) { %>
